// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-collapse.vue Demo-使用插槽 1`] = `
<div>
  <div class="root" fill="head">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text"> 设置 </a>
        </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">
            Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">
            <div class="root" fill="head">
              <div class="root">
                <div class="head" expand-trigger="click">
                  <span vusion-slot-name="title" vusion-slot-name-edit="title">
                    面板1
                  </span>
                  <span class="expander"></span>
                  <span class="extra" vusion-slot-name="extra"> </span>
                </div>
                <transition-stub>
                  <div class="body" style="display: none;">
                    <div class="content" vusion-slot-name="default">Content1
                    </div>
                  </div>
                </transition-stub>
              </div>
              <div class="root" expanded="true">
                <div class="head" expand-trigger="click">
                  <span vusion-slot-name="title" vusion-slot-name-edit="title">
                    面板2
                  </span>
                  <span class="expander" expanded="true"></span>
                  <span class="extra" vusion-slot-name="extra"> </span>
                </div>
                <transition-stub>
                  <div class="body">
                    <div class="content" vusion-slot-name="default">Content2
                    </div>
                  </div>
                </transition-stub>
              </div>
              <div class="root">
                <div class="head" expand-trigger="click">
                  <span vusion-slot-name="title" vusion-slot-name-edit="title">
                    面板3
                  </span>
                  <span class="expander"></span>
                  <span class="extra" vusion-slot-name="extra"> </span>
                </div>
                <transition-stub>
                  <div class="body" style="display: none;">
                    <div class="content" vusion-slot-name="default">Content3
                    </div>
                  </div>
                </transition-stub>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-基本用法 1`] = `
<div>
  <div class="root" fill="head">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">面板1</span>
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">面板2</span>
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">面板3</span>
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-基本用法 2`] = `
<div>
  <div class="root" fill="head">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" disabled="disabled">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-填充模式 1`] = `
<div>
  <div class="root" fill="content">
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-填充模式 2`] = `
<div>
  <div class="root" fill="none">
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-手风琴模式 1`] = `
<div>
  <div class="root" fill="head">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-简洁模式 1`] = `
<div>
  <div appear="simple" class="root" fill="head">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text"> 设置 </a>
        </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">
            Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">
            Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-设置尺寸 1`] = `
<div>
  <div class="root" fill="head" size="small">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" disabled="disabled">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-面板嵌套 1`] = `
<div>
  <div class="root" fill="head">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板1
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板2
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">
            <div class="root" fill="head">
              <div class="root">
                <div class="head" expand-trigger="click">
                  <span vusion-slot-name="title" vusion-slot-name-edit="title">
                    面板1
                  </span>
                  <span class="expander"></span>
                  <span class="extra" vusion-slot-name="extra"> </span>
                </div>
                <transition-stub>
                  <div class="body" style="display: none;">
                    <div class="content" vusion-slot-name="default">Content1
                    </div>
                  </div>
                </transition-stub>
              </div>
              <div class="root" expanded="true">
                <div class="head" expand-trigger="click">
                  <span vusion-slot-name="title" vusion-slot-name-edit="title">
                    面板2
                  </span>
                  <span class="expander" expanded="true"></span>
                  <span class="extra" vusion-slot-name="extra"> </span>
                </div>
                <transition-stub>
                  <div class="body">
                    <div class="content" vusion-slot-name="default">Content2
                    </div>
                  </div>
                </transition-stub>
              </div>
              <div class="root">
                <div class="head" expand-trigger="click">
                  <span vusion-slot-name="title" vusion-slot-name-edit="title">
                    面板3
                  </span>
                  <span class="expander"></span>
                  <span class="extra" vusion-slot-name="extra"> </span>
                </div>
                <transition-stub>
                  <div class="body" style="display: none;">
                    <div class="content" vusion-slot-name="default">Content3
                    </div>
                  </div>
                </transition-stub>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          面板3
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`u-collapse.vue Demo-额外插槽 1`] = `
<div>
  <div class="root" fill="head">
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">面板1</span>
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text"> 设置 </a>
        </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content1
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root" expanded="true">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">面板2</span>
        </span>
        <span class="expander" expanded="true"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body">
          <div class="content" vusion-slot-name="default">Content2
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="root">
      <div class="head" expand-trigger="click">
        <span vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">面板3</span>
        </span>
        <span class="expander"></span>
        <span class="extra" vusion-slot-name="extra"> </span>
      </div>
      <transition-stub>
        <div class="body" style="display: none;">
          <div class="content" vusion-slot-name="default">Content3
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
